Fix item cards bottom spacing

--- a/client/src/component/item/ItemCard.css
+++ b/client/src/component/item/ItemCard.css
@@ -30,11 +30,3 @@
 .card-description {
     font-size: 0.935rem;
 }
-
-.card-tags {
-    margin-bottom: 2px;
-}
-
-.card-tags > .badge {
-    margin-right: 6px;
-}
