--- a/client/src/page/Dashboard.css
+++ b/client/src/page/Dashboard.css
@@ -6,6 +6,6 @@
     display: flex;
 }
 
-.row div {
+.main-cards-view {
     margin-bottom: 12px;
 }
